--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test:watch": "jest --watch",
     "lint": "eslint src",
     "gen": "node examples/scripts/generateExampleConfigs.js && node examples/scripts/generateExamples.js && xdg-open docs/jquery.html",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "version": "version-changelog CHANGELOG.md && changelog-verify CHANGELOG.md && git add CHANGELOG.md"
   },
   "author": "Kiran Abburi",
   "license": "MIT",
@@ -44,6 +45,7 @@
     "babel-jest": "^23.4.2",
     "babel-loader": "^8.0.4",
     "babel-preset-airbnb": "^2.1.1",
+    "changelog-verify": "^1.1.2",
     "css-loader": "^0.28.0",
     "deepmerge": "^1.1.0",
     "del": "^2.2.2",
@@ -78,6 +80,7 @@
     "slick-carousel": "^1.8.1",
     "style-loader": "^0.16.1",
     "uglifyjs-webpack-plugin": "^2.0.1",
+    "version-changelog": "^3.1.1",
     "webpack": "^4.21.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.9",
