--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@domain-group/react-slick",
-  "version": "0.24.5-gamma.6",
+  "version": "0.24.6",
   "description": "React port of slick carousel",
   "main": "./lib",
   "files": [
